--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 'Kemal AKIN'
 description: 'My Notes'
 keyword: 'ruby'
-url: 'http://vilusa.github.io' # your host
+url: 'https://kemalakin.com' # your host
 
 # if you don't need baseurl, you should leave this value blank.
 baseurl: ''
